--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -31,6 +31,25 @@ header {
 }
 
 
+// Header
+
+// utilities
+.utility-bar {
+    a {
+      color: white;
+      font-weight: 200;
+      text-decoration: none;
+    }
+
+    background-color: rgba(5, 81, 96, 0.3);
+}
+
+// navbar
+.navbar-brand {
+    font-family: 'Satisfy';
+}
+
+
 // Home page
 
 // image carousel
@@ -50,7 +69,7 @@ div.carousel-caption {
 }
 
 
-// top/new images box 
+// top/new images box
 .list-group-title {
     font-size: 1.25rem;
     font-weight: bold;
@@ -74,6 +93,3 @@ div.carousel-caption {
 #new-images-list {
     background-color: #1b1b1b;
 }
-
-
-
